# goodwe_openhab

./: LICENSE  README.md  gw.man.1  gw.service  pyproject.toml  requirements.txt  setup.cfg
src/gw/: __init__.py  gw.py
