[metadata]
name = gw
author = Libor Ukropec
version = attr: gw.VERSION
license = MIT
platforms = any

[options]
install_requires =
        goodwe
        paho-mqtt

include_package_data = True
package_dir=
    =src
packages = find:

[options.packages.find]
where=src

[options.entry_points]
console_scripts =
  gw = gw:main

